reverse lat,lon for porto and fix savecurrenttraj by not splitting coordinate

--- a/processing/kol_clean_data.ipynb
+++ b/processing/kol_clean_data.ipynb
@@ -65,8 +65,7 @@
     "# Reading the dataset into a dataframe\n",
     "\n",
     "raw_df = pd.read_csv(\n",
-    "    RAW_DATA_FILE, usecols=[\"serviceJourney\",\n",
-    "                            \"recordedAtTime\", \"longitude\", \"latitude\"]\n",
+    "    RAW_DATA_FILE, usecols=[\"serviceJourney\", \"recordedAtTime\", \"longitude\", \"latitude\"]\n",
     ")\n",
     "# Filtering the data\n",
     "filtered_df = raw_df[\n",
@@ -151,7 +150,6 @@
     "                OUTPUT_FOLDER=OUTPUT_FOLDER,\n",
     "                file_name=name_counter,\n",
     "                trajectory=trajectory,\n",
-    "                split_coordinate=False,\n",
     "            )\n",
     "            counter += 1\n",
     "            name_counter = increment_alphabetical(name_counter)\n",
@@ -208,8 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_meta_files(path_to_files=OUTPUT_FOLDER,\n",
-    "                  data_prefix=\"R_\", create_test_set=True)"
+    "create_meta_files(path_to_files=OUTPUT_FOLDER, data_prefix=\"R_\", create_test_set=True)"
    ]
   }
  ],
