--- a/processing/rome_clean_data.ipynb
+++ b/processing/rome_clean_data.ipynb
@@ -241,10 +241,11 @@
     "    try:\n",
     "        # Checking whether time between two consecutive points are greater than a given const\n",
     "        t_last = datetime.strptime(\n",
-    "            last_timestamp[0 : last_timestamp.index(\".\")], \"%Y-%m-%d %H:%M:%S\"\n",
+    "            last_timestamp[0: last_timestamp.index(\".\")], \"%Y-%m-%d %H:%M:%S\"\n",
     "        )\n",
     "        t_current = datetime.strptime(\n",
-    "            current_timestamp[0 : current_timestamp.index(\".\")], \"%Y-%m-%d %H:%M:%S\"\n",
+    "            current_timestamp[0: current_timestamp.index(\n",
+    "                \".\")], \"%Y-%m-%d %H:%M:%S\"\n",
     "        )\n",
     "\n",
     "    except:\n",
@@ -276,7 +277,8 @@
     "            old_loc = trajectory[0]\n",
     "            for loc in trajectory:\n",
     "                if old_loc != loc:\n",
-    "                    distance = calculate_trajectory_distance([(old_loc), (loc)])\n",
+    "                    distance = calculate_trajectory_distance(\n",
+    "                        [(old_loc), (loc)])\n",
     "\n",
     "                    # If distance between two consecutive coordinates are too great:\n",
     "                    if distance > MAX_DIST_BETWEEN_LOCATIONS:\n",
@@ -292,7 +294,8 @@
     "                # print(trajectory)\n",
     "                # coordinates_lists = [[lat, lon] for lat, lon in trajectory]\n",
     "                cleaned_trajectories.append(\n",
-    "                    [current_driver_id, current_timestamp, [float(lat), float(lon)]]\n",
+    "                    [current_driver_id, current_timestamp,\n",
+    "                        [float(lat), float(lon)]]\n",
     "                )\n",
     "                # if LOG:\n",
     "                #     print(\n",
@@ -303,7 +306,6 @@
     "                    OUTPUT_FOLDER=OUTPUT_FOLDER,\n",
     "                    file_name=name_counter,\n",
     "                    trajectory=trajectory,\n",
-    "                    split_coordinate=False,\n",
     "                )\n",
     "                # if LOG:\n",
     "\n",
@@ -343,7 +345,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_meta_files(path_to_files=OUTPUT_FOLDER, data_prefix=\"R_\", create_test_set=True)"
+    "create_meta_files(path_to_files=OUTPUT_FOLDER,\n",
+    "                  data_prefix=\"R_\", create_test_set=True)"
    ]
   }
  ],
