add metafiles for grid-based hashing

--- a/lsh_disk.ipynb
+++ b/lsh_disk.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "# Notebook for the creation of the disk lsh hashes for both datasets\n",
     "\n",
-    "Sheet that converts the extracted data from the data/chosen_data folder to hashes that will be stored in data/hashed_data/disk"
+    "Sheet that converts the extracted data from the data/chosen_data folder to hashes that will be stored in data/hashed_data/disk\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,20 +24,20 @@
     "from processing.utils import metafile_handler as mfh\n",
     "\n",
     "import timeit as ti\n",
-    "from tqdm import tqdm \n",
+    "from tqdm import tqdm\n",
     "\n",
     "from multiprocessing import Pool"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Declaring global variables:\n",
     "\n",
-    "SHOULD_DELETE_OLD_FILES= False\n",
+    "SHOULD_DELETE_OLD_FILES = False\n",
     "\n",
     "OUTPUT_FOLDER_PORTO = \"hashed_data/disk/porto/\"\n",
     "OUTPUT_FOLDER_ROME = \"hashed_data/disk/rome/\"\n",
@@ -60,14 +60,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Porto LSH\n",
+    "## Porto LSH Disk\n",
     "\n",
-    "Beginning with the porto set"
+    "Beginning with the porto set\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,12 +98,23 @@
     "num_disks = 50\n",
     "meta_file = \"dataset/porto/output/META-100.TXT\"\n",
     "\n",
-    "DiskPorto = DiskLSH(\"Porto D1\", P_MIN_LAT, P_MAX_LAT, P_MIN_LON, P_MAX_LON, num_disks, layers, diameter, meta_file, PORTO_DATA)"
+    "DiskPorto = DiskLSH(\n",
+    "    \"Porto D1\",\n",
+    "    P_MIN_LAT,\n",
+    "    P_MAX_LAT,\n",
+    "    P_MIN_LON,\n",
+    "    P_MAX_LON,\n",
+    "    num_disks,\n",
+    "    layers,\n",
+    "    diameter,\n",
+    "    meta_file,\n",
+    "    PORTO_DATA,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +124,7 @@
     "\n",
     "for key in hashes:\n",
     "    # print(key)\n",
-    "    with open(f'{OUTPUT_FOLDER_PORTO}/{key}.txt', 'w') as file:\n",
+    "    with open(f\"{OUTPUT_FOLDER_PORTO}/{key}.txt\", \"w\") as file:\n",
     "        for hash in hashes[key]:\n",
     "            # print(hash)\n",
     "            file.write(\"%s\\n\" % hash)\n",
@@ -128,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,26 +161,26 @@
     "#     disk = DiskLSH(\"Porto D1\", P_MIN_LAT, P_MAX_LAT, P_MIN_LON, P_MAX_LON, num_disks, layers, diameter, meta_file, PORTO_DATA)\n",
     "#     return disk.compute_dataset_hashes_with_KD_tree(1,1)[0]\n",
     "\n",
-    "#runtimes, number = DiskPorto.measure_hash_computation_with_KD_tree(number=1, repeat=10)\n",
-    "#print(runtimes)\n",
-    "#print(f\"Ran the hash computation {len(runtimes)} times. Fastest runtime: {min(runtimes)}s for {number} hashes\")"
+    "# runtimes, number = DiskPorto.measure_hash_computation_with_KD_tree(number=1, repeat=10)\n",
+    "# print(runtimes)\n",
+    "# print(f\"Ran the hash computation {len(runtimes)} times. Fastest runtime: {min(runtimes)}s for {number} hashes\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Rome LSH\n",
-    "Continuing with the rome set"
+    "# Rome LSH Disk\n",
+    "\n",
+    "Continuing with the rome set\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Run this cell to clear the chosen files in the ROME folder\n",
     "\n",
     "if SHOULD_DELETE_OLD_FILES:\n",
@@ -186,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,12 +208,23 @@
     "num_disks = 50\n",
     "meta_file = \"dataset/rome/output/META-100.TXT\"\n",
     "\n",
-    "DiskRome = DiskLSH(\"Rome D1\", R_MIN_LAT, R_MAX_LAT, R_MIN_LON, R_MAX_LON, num_disks, layers, diameter, meta_file, ROME_DATA)"
+    "DiskRome = DiskLSH(\n",
+    "    \"Rome D1\",\n",
+    "    R_MIN_LAT,\n",
+    "    R_MAX_LAT,\n",
+    "    R_MIN_LON,\n",
+    "    R_MAX_LON,\n",
+    "    num_disks,\n",
+    "    layers,\n",
+    "    diameter,\n",
+    "    meta_file,\n",
+    "    ROME_DATA,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +232,7 @@
     "hashes = DiskRome.compute_dataset_hashes_with_KD_tree()\n",
     "\n",
     "for key in hashes:\n",
-    "    with open(f'{OUTPUT_FOLDER_ROME}/{key}.txt', 'w') as file:\n",
+    "    with open(f\"{OUTPUT_FOLDER_ROME}/{key}.txt\", \"w\") as file:\n",
     "        for hash in hashes[key]:\n",
     "            file.write(\"%s\\n\" % hash)\n",
     "        file.close()\n",
@@ -227,12 +249,13 @@
    "metadata": {},
    "source": [
     "# Measuring run-times of hash generation\n",
+    "\n",
     "The cells below are created to measure the time-efficiency of the hash computation\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6+"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
