--- a/lsh_grid.ipynb
+++ b/lsh_grid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +51,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ROME LSH\n"
+    "# Rome LSH Grid\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,22 +117,22 @@
     "        file.close()\n",
     "\n",
     "# Copying the meta_files:\n",
-    "# meta_files = mfh.get_meta_files(ROME_DATA)\n",
+    "meta_files = mfh.get_meta_files(ROME_DATA)\n",
     "\n",
-    "# for filename in meta_files:\n",
-    "#     shutil.copy(ROME_DATA + filename, OUTPUT_FOLDER_ROME)"
+    "for filename in meta_files:\n",
+    "    shutil.copy(ROME_DATA + filename, OUTPUT_FOLDER_ROME)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PORTO LSH\n"
+    "# Porto LSH Grid\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,10 +193,10 @@
     "        file.close()\n",
     "\n",
     "# Copying the meta_files\n",
-    "# meta_files = mfh.get_meta_files(PORTO_DATA)\n",
+    "meta_files = mfh.get_meta_files(PORTO_DATA)\n",
     "\n",
-    "# for filename in meta_files:\n",
-    "#     shutil.copy(PORTO_DATA + filename, OUTPUT_FOLDER_PORTO)"
+    "for filename in meta_files:\n",
+    "    shutil.copy(PORTO_DATA + filename, OUTPUT_FOLDER_PORTO)"
    ]
   }
  ],
