add grid and disk based hashing for kolumbus dataset and its metafiles

--- a/lsh_disk.ipynb
+++ b/lsh_disk.ipynb
@@ -31,19 +31,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Declaring global variables:\n",
     "\n",
-    "SHOULD_DELETE_OLD_FILES = False\n",
+    "SHOULD_DELETE_OLD_FILES = True\n",
     "\n",
     "OUTPUT_FOLDER_PORTO = \"hashed_data/disk/porto/\"\n",
     "OUTPUT_FOLDER_ROME = \"hashed_data/disk/rome/\"\n",
+    "OUTPUT_FOLDER_KOLUMBUS = \"hashed_data/disk/kolumbus/\"\n",
     "\n",
     "PORTO_DATA = \"dataset/porto/output/\"\n",
     "ROME_DATA = \"dataset/rome/output/\"\n",
+    "KOLUMBUS_DATA = \"dataset/kolumbus/output/\"\n",
     "\n",
     "P_MAX_LON = -8.57\n",
     "P_MIN_LON = -8.66\n",
@@ -53,117 +55,12 @@
     "R_MAX_LON = 12.53\n",
     "R_MIN_LON = 12.44\n",
     "R_MAX_LAT = 41.93\n",
-    "R_MIN_LAT = 41.88"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Porto LSH Disk\n",
+    "R_MIN_LAT = 41.88\n",
     "\n",
-    "Beginning with the porto set\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run this cell to clear the chosen files in the PORTO folder\n",
-    "\n",
-    "if SHOULD_DELETE_OLD_FILES:\n",
-    "    for filename in os.listdir(OUTPUT_FOLDER_PORTO):\n",
-    "        file_path = os.path.join(OUTPUT_FOLDER_PORTO, filename)\n",
-    "        try:\n",
-    "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
-    "                os.unlink(file_path)\n",
-    "            elif os.path.isdir(file_path):\n",
-    "                shutil.rmtree(file_path)\n",
-    "        except Exception as e:\n",
-    "            print(\"Failed to remove %s. Reason: %s\" % (file_path, e))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a disk-based LSH object over Porto\n",
-    "\n",
-    "layers = 4\n",
-    "diameter = 1.5\n",
-    "num_disks = 50\n",
-    "meta_file = \"dataset/porto/output/META-100.TXT\"\n",
-    "\n",
-    "DiskPorto = DiskLSH(\n",
-    "    \"Porto D1\",\n",
-    "    P_MIN_LAT,\n",
-    "    P_MAX_LAT,\n",
-    "    P_MIN_LON,\n",
-    "    P_MAX_LON,\n",
-    "    num_disks,\n",
-    "    layers,\n",
-    "    diameter,\n",
-    "    meta_file,\n",
-    "    PORTO_DATA,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Generating the disk-based LSH objects hashes and saving them to file\n",
-    "\n",
-    "hashes = DiskPorto.compute_dataset_hashes_with_KD_tree()\n",
-    "\n",
-    "for key in hashes:\n",
-    "    # print(key)\n",
-    "    with open(f\"{OUTPUT_FOLDER_PORTO}/{key}.txt\", \"w\") as file:\n",
-    "        for hash in hashes[key]:\n",
-    "            # print(hash)\n",
-    "            file.write(\"%s\\n\" % hash)\n",
-    "        file.close\n",
-    "\n",
-    "# Copying meta_files as well\n",
-    "meta_files = mfh.get_meta_files(PORTO_DATA)\n",
-    "\n",
-    "for filename in meta_files:\n",
-    "    shutil.copy(PORTO_DATA + filename, OUTPUT_FOLDER_PORTO)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Cell for methods use to measure the hashing performance efficiency, utilises parallell programming for optimal measurements\n",
-    "# layers = 4\n",
-    "# diameter = 1.5\n",
-    "# num_disks = 50\n",
-    "# meta_file = \"dataset/porto/output/META-100.TXT\"\n",
-    "\n",
-    "# def fun_wrapper_naive(x):\n",
-    "#     disk = DiskLSH(\"Porto D1\", P_MIN_LAT, P_MAX_LAT, P_MIN_LON, P_MAX_LON, num_disks, layers, diameter, meta_file, PORTO_DATA)\n",
-    "#     return disk.measure_hash_computation(1,1)[0]\n",
-    "\n",
-    "# def fun_wrapper_quadrants(x):\n",
-    "#     disk = DiskLSH(\"Porto D1\", P_MIN_LAT, P_MAX_LAT, P_MIN_LON, P_MAX_LON, num_disks, layers, diameter, meta_file, PORTO_DATA)\n",
-    "#     return disk.measure_hash_computation_with_quad_tree(1,1)[0]\n",
-    "\n",
-    "# def fun_wrapper_KD_tree(x):\n",
-    "#     disk = DiskLSH(\"Porto D1\", P_MIN_LAT, P_MAX_LAT, P_MIN_LON, P_MAX_LON, num_disks, layers, diameter, meta_file, PORTO_DATA)\n",
-    "#     return disk.compute_dataset_hashes_with_KD_tree(1,1)[0]\n",
-    "\n",
-    "# runtimes, number = DiskPorto.measure_hash_computation_with_KD_tree(number=1, repeat=10)\n",
-    "# print(runtimes)\n",
-    "# print(f\"Ran the hash computation {len(runtimes)} times. Fastest runtime: {min(runtimes)}s for {number} hashes\")"
+    "K_MAX_LON = 5.80\n",
+    "K_MIN_LON = 5.70\n",
+    "K_MAX_LAT = 59.10\n",
+    "K_MIN_LAT = 58.85"
    ]
   },
   {
@@ -242,6 +139,163 @@
     "\n",
     "for filename in meta_files:\n",
     "    shutil.copy(ROME_DATA + filename, OUTPUT_FOLDER_ROME)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Porto LSH Disk\n",
+    "\n",
+    "Beginning with the porto set\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run this cell to clear the chosen files in the PORTO folder\n",
+    "\n",
+    "if SHOULD_DELETE_OLD_FILES:\n",
+    "    for filename in os.listdir(OUTPUT_FOLDER_PORTO):\n",
+    "        file_path = os.path.join(OUTPUT_FOLDER_PORTO, filename)\n",
+    "        try:\n",
+    "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
+    "                os.unlink(file_path)\n",
+    "            elif os.path.isdir(file_path):\n",
+    "                shutil.rmtree(file_path)\n",
+    "        except Exception as e:\n",
+    "            print(\"Failed to remove %s. Reason: %s\" % (file_path, e))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a disk-based LSH object over Porto\n",
+    "\n",
+    "layers = 4\n",
+    "diameter = 1.5\n",
+    "num_disks = 50\n",
+    "meta_file = \"dataset/porto/output/META-100.TXT\"\n",
+    "\n",
+    "DiskPorto = DiskLSH(\n",
+    "    \"Porto D1\",\n",
+    "    P_MIN_LAT,\n",
+    "    P_MAX_LAT,\n",
+    "    P_MIN_LON,\n",
+    "    P_MAX_LON,\n",
+    "    num_disks,\n",
+    "    layers,\n",
+    "    diameter,\n",
+    "    meta_file,\n",
+    "    PORTO_DATA,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generating the disk-based LSH objects hashes and saving them to file\n",
+    "\n",
+    "hashes = DiskPorto.compute_dataset_hashes_with_KD_tree()\n",
+    "\n",
+    "for key in hashes:\n",
+    "    # print(key)\n",
+    "    with open(f\"{OUTPUT_FOLDER_PORTO}/{key}.txt\", \"w\") as file:\n",
+    "        for hash in hashes[key]:\n",
+    "            # print(hash)\n",
+    "            file.write(\"%s\\n\" % hash)\n",
+    "        file.close\n",
+    "\n",
+    "# Copying meta_files as well\n",
+    "meta_files = mfh.get_meta_files(PORTO_DATA)\n",
+    "\n",
+    "for filename in meta_files:\n",
+    "    shutil.copy(PORTO_DATA + filename, OUTPUT_FOLDER_PORTO)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kolumbus LSH Disk\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run this cell to clear the chosen files in the ROME folder\n",
+    "\n",
+    "if SHOULD_DELETE_OLD_FILES:\n",
+    "    for filename in os.listdir(OUTPUT_FOLDER_KOLUMBUS):\n",
+    "        file_path = os.path.join(OUTPUT_FOLDER_KOLUMBUS, filename)\n",
+    "        try:\n",
+    "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
+    "                os.unlink(file_path)\n",
+    "            elif os.path.isdir(file_path):\n",
+    "                shutil.rmtree(file_path)\n",
+    "        except Exception as e:\n",
+    "            print(\"Failed to remove %s. Reason: %s\" % (file_path, e))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating a disk based LSH hashing object over Kolumbus\n",
+    "\n",
+    "layers = 4\n",
+    "diameter = 1.5\n",
+    "num_disks = 50\n",
+    "meta_file = \"dataset/kolumbus/output/META-100.TXT\"\n",
+    "\n",
+    "DiskKolumbus = DiskLSH(\n",
+    "    \"Kolumbus D1\",\n",
+    "    K_MIN_LAT,\n",
+    "    K_MAX_LAT,\n",
+    "    K_MIN_LON,\n",
+    "    K_MAX_LON,\n",
+    "    num_disks,\n",
+    "    layers,\n",
+    "    diameter,\n",
+    "    meta_file,\n",
+    "    KOLUMBUS_DATA,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generating the hashes and storing them in output folder along with the meta-files\n",
+    "hashes = DiskKolumbus.compute_dataset_hashes_with_KD_tree()\n",
+    "\n",
+    "for key in hashes:\n",
+    "    with open(f\"{OUTPUT_FOLDER_KOLUMBUS}/{key}.txt\", \"w\") as file:\n",
+    "        for hash in hashes[key]:\n",
+    "            file.write(\"%s\\n\" % hash)\n",
+    "        file.close()\n",
+    "\n",
+    "# Copying meta_files as well\n",
+    "meta_files = mfh.get_meta_files(KOLUMBUS_DATA)\n",
+    "\n",
+    "for filename in meta_files:\n",
+    "    shutil.copy(KOLUMBUS_DATA + filename, OUTPUT_FOLDER_KOLUMBUS)"
    ]
   },
   {
