--- a/lsh_grid.ipynb
+++ b/lsh_grid.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,20 +31,26 @@
     "\n",
     "OUTPUT_FOLDER_PORTO = \"hashed_data/grid/porto/\"\n",
     "OUTPUT_FOLDER_ROME = \"hashed_data/grid/rome/\"\n",
-    "# OUTPUT_FOLDER_ROME = \"hashed_data/grid/rome/\"\n",
+    "OUTPUT_FOLDER_KOLUMBUS = \"hashed_data/grid/kolumbus/\"\n",
     "\n",
     "PORTO_DATA = \"dataset/porto/output/\"\n",
     "ROME_DATA = \"dataset/rome/output/\"\n",
+    "KOLUMBUS_DATA = \"dataset/kolumbus/output/\"\n",
     "\n",
-    "P_MAX_LON = -0.00\n",
-    "P_MIN_LON = -8.00\n",
-    "P_MAX_LAT = 42.00\n",
-    "P_MIN_LAT = 41.00\n",
+    "P_MAX_LON = -8.57\n",
+    "P_MIN_LON = -8.66\n",
+    "P_MAX_LAT = 41.19\n",
+    "P_MIN_LAT = 41.14\n",
     "\n",
     "R_MAX_LON = 12.53\n",
     "R_MIN_LON = 12.44\n",
     "R_MAX_LAT = 41.93\n",
-    "R_MIN_LAT = 41.88"
+    "R_MIN_LAT = 41.88\n",
+    "\n",
+    "K_MAX_LON = 5.80\n",
+    "K_MIN_LON = 5.70\n",
+    "K_MAX_LAT = 59.10\n",
+    "K_MIN_LAT = 58.85"
    ]
   },
   {
@@ -177,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,6 +203,82 @@
     "\n",
     "for filename in meta_files:\n",
     "    shutil.copy(PORTO_DATA + filename, OUTPUT_FOLDER_PORTO)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kolumbus LSH Grid\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run this cell to clear the chosen files in the PORTO folder\n",
+    "\n",
+    "if SHOULD_DELETE_OLD_FILES:\n",
+    "    for filename in os.listdir(OUTPUT_FOLDER_KOLUMBUS):\n",
+    "        file_path = os.path.join(OUTPUT_FOLDER_KOLUMBUS, filename)\n",
+    "        try:\n",
+    "            if os.path.isfile(file_path) or os.path.islink(file_path):\n",
+    "                os.unlink(file_path)\n",
+    "            elif os.path.isdir(file_path):\n",
+    "                shutil.rmtree(file_path)\n",
+    "        except Exception as e:\n",
+    "            print(\"Failed to remove %s. Reason: %s\" % (file_path, e))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Grid LSH objec for Porto\n",
+    "\n",
+    "resolution = 1.6  # km\n",
+    "layers = 5\n",
+    "meta_file = \"dataset/kolumbus/output/META-100.TXT\"\n",
+    "\n",
+    "GridKolumbus = GridLSH(\n",
+    "    \"Kolumbus G1\",\n",
+    "    K_MIN_LAT,\n",
+    "    K_MAX_LAT,\n",
+    "    K_MIN_LON,\n",
+    "    K_MAX_LON,\n",
+    "    resolution,\n",
+    "    layers,\n",
+    "    meta_file,\n",
+    "    KOLUMBUS_DATA,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating the hashes and saving them to output folder\n",
+    "\n",
+    "hashes = GridKolumbus.compute_dataset_hashes()\n",
+    "\n",
+    "# Saving the hashes to files\n",
+    "for key in hashes:\n",
+    "    with open(f\"{OUTPUT_FOLDER_KOLUMBUS}/{key}.txt\", \"w\") as file:\n",
+    "        for hash in hashes[key]:\n",
+    "            file.write(\"%s\\n\" % hash)\n",
+    "        file.close()\n",
+    "\n",
+    "# Copying the meta_files\n",
+    "meta_files = mfh.get_meta_files(KOLUMBUS_DATA)\n",
+    "\n",
+    "for filename in meta_files:\n",
+    "    shutil.copy(KOLUMBUS_DATA + filename, OUTPUT_FOLDER_KOLUMBUS)"
    ]
   }
  ],
